[metadata]
name = pyvpn
version = 1.1
url = https://github.com/vaibhavjaiman/PyVpn
long_description = file: README.md
long_description_content_type = text/markdown
author = Vaibhav Jaiman
author_email = vaibhavjaiman@gmail.com
license = GNU General Public License v3.0
classifiers =
  Programming Language :: Python :: 3.8
  Intended Audience :: Information Technology
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent

[options]
install_requires =
	netifaces
	pexpect
	pyyaml
packages =
	pyvpn
	pyvpn.source
